language/move-lang/tests/move_check/borrows/call_ordering.exp
error: 

   ┌── tests/move_check/borrows/call_ordering.move:6:17 ───
   │
 7 │         foo(freeze(s), { *f = 0; 1 })
   │             ^^^^^^^^^ Invalid freeze.
   ·
 6 │         let f = &mut s.f;
   │                 -------- Field 'f' is still being mutably borrowed by this reference
   │

error: 

    ┌── tests/move_check/borrows/call_ordering.move:12:13 ───
    │
 12 │         bar(&mut s.f, { s.f = 0; 1 })
    │                         ^^^^^^^ Invalid mutation of reference.
    ·
 12 │         bar(&mut s.f, { s.f = 0; 1 })
    │             -------- It is still being mutably borrowed by this reference
    │

